# activedirectory

./: .coveragerc  .gitignore  .pep8  .travis.yml  LICENSE  Makefile  README.md  README.rst  register.py  release.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test  test-quick  tox.ini
activedirectory/: __init__.py  activedirectory.py  version.py
docs/: conf.py  index.rst
