[metadata]
description-file = README

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = docs
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html


[pytest]
norecursedirs = . .svn jira _build tmp* lib/third lib *.egg bin distutils build docs demo
python_files = *.py
addopts = --ignore=setup.py --tb=long -rsxX -v --junitxml=reports -n 1 --maxfail=3  activedirectory

# these are important for distributed testing, to speedup their execution we minimize what we sync
rsyncdirs = . activedirectory
rsyncignore = .hg .git
pep8ignore = E501 E265

[pep8]
exclude=build,lib,.tox,third,*.egg,docs,packages
;filename=
;select
ignore=E501,E265
max-line-length=1024
count=1
;format
;quiet
;show-pep8
;show-source
statistics=1
;verbose=1

;PEP8_OPTS="--filename=*.py  --exclude=lib --ignore=E501 scripts"
;pep8 $PEP8_OPTS --show-source --repeat
;pep8 --statistics -qq $PEP8_OPTS
